--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 <article>
-  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
+  <headerstyle="background-color: #007bff; color: white; padding: 10px;"><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
   {{ content }}
 </article>
