--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,5 +40,9 @@
   {% include menu.html menu=site.external %}
 </footer>
 {% endif %}
-
+header {
+    background-color: #007bff;
+    color: white;
+    padding: 10px;
+}
 </html>
